Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82152

Crash in Scene3D with OnDemand policy in a QQuickWidget

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.2, 5.15.0 RC
    • 5.14
    • Qt3D
    • None
    • Linux/X11, macOS
    • b769deaf57645f533cccb352722ea7b79475a2ea (qt/qt3d/5.14)

      The crash seems to happen when using the OnDemand render policy and there's a scene update (but only in certain situations; we noticed this when changing a material's texture).

      It only happens when the scene is in a QQuickWidget (it's not reproducible with QQuickView).

      I could only reproduce this with Qt 5.14 (Qt 5.12 seems to work fine).

      A simple test case and the stack trace are attached.

        For Gerrit Dashboard: QTBUG-82152
        # Subject Branch Project Status CR V

            seanharmer Sean Harmer
            mauro.persano Mauro Persano
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes