Fix OnDemand rendering crash when using QQuickWidget

Restore the original GL context when handling the
QQuickWindow::beforeSynchronizing signal to prevent crashes.

Fixes: QTBUG-82152
Change-Id: Ibcf3f7fbc1d9ec7b83a76fd617d7aa77ab82ba14
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>